fixed spacing issue on diagnosis header

--- a/styles.css
+++ b/styles.css
@@ -656,7 +656,7 @@ padding-left: 12px;
   }
 
   .diagnosis-header-container{
-    padding: 20px 20px 40px 20px;
+    padding: 20px 20px 30px 20px;
   }
 
   #diagnosis-metrics-container{
